[build-system]
requires = ["flit-core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "openrank-onchain-score"
dynamic = ["version", "description"]
readme = "README.md"
authors = [
    { name = "Eugene Kim", email = "ek@karma3labs.com" },
]
maintainers = [
    { name = "Eugene Kim", email = "ek@karma3labs.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
dependencies = [
    "typer~=0.15",
]

[project.urls]
Homepage = "https://github.com/openrankprotocol/py-onchain-score"
Repository = "https://github.com/openrankprotocol/py-onchain-score.git"
Issues = "https://github.com/openrankprotocol/py-onchain-score/issues"

[project.scripts]
openrank-onchain-score = "openrank.onchainscore.cli:entrypoint"

[tool.flit.module]
name = "openrank.onchainscore"